[package]
name = "niri-integration"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
daemonize = "0.5.0"
neovim-lib = "0.6.1"
niri-ipc = { git = "https://github.com/ein-shved/niri.git", package = "niri-ipc", branch = "view_offset" }
nix = { version = "0.30.1", features = [ "user" ] }
regex = "1.11.1"

serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
